kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-app
  labels:
    app.kubernetes.io/name: devops-hello
    app.kubernetes.io/part-of: devops-hello-kubernetes
