kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: devops-app
  labels:
    app: devops-hello
spec:
  type: ClusterIP
  selector:
    app: devops-hello
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
